Refactoring to support Quarkus 1.6.x and jOOQ 3.13.x